[package]
name = "invariant_fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
fuser = "0.15.0"
libc = "0.2.162"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
threadpool = "1.8"
